major updates to work page, unpublishing old work, tweaking deputy and stackla to fit new tempalte

--- a/aeroster.html
+++ b/aeroster.html
@@ -1,19 +1,18 @@
 ---
-layout:                default
+layout: default
 
 title: Fulfilling a childhood ambition and a gap in the market
 ---
 
-
-<div class="Page Page--split">
-	<div class="container Page-container">
-		<div class="Page-hero">
+<div class="Page">
+	<div class="container">
+		<section class="Page-hero">
 			<h1>Fulfilling a childhood ambition and a gap in the market</h1>
 
 			<img src="/assets/images/work/aeroster/hero.png" class="Page-heroImage">
-		</div>
+		</section>
 
-		<div class="Page-subhero">
+		<section class="Page-subhero">
 			<div class="grid">
 				<div class="grid-item when-lg-6">
 					<h4>
@@ -61,84 +60,81 @@ title: Fulfilling a childhood ambition and a gap in the market
 					</ul>
 				</div>
 			</div>
-		</div>
+		</section>
 
-		
-		<div class="Page-content">
-			<section class="Page-section" id="pair">
-				<h2 class="m-bottom--lg">
-					<p>Pair designing</p>
-					<p class="font-serif color-muted">I can’t take all the credit for this one</p>
-				</h2>
-				<div class="grid">
-					<div class="grid-item when-lg-6">
-						{% include carousel.html style="left" image1="/assets/images/work/aeroster/optimised/emila1.png" image2="/assets/images/work/aeroster/optimised/emila2.png" image3="/assets/images/work/aeroster/optimised/emila3.png" description="Thank you Emila :)" %}
-					</div>
-
-					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
-						<p>Unfortunately, I was tied up with other projects and wasn’t able to start working immediately. Chris’ schedule was tight, so I got some help from my friend and excellent designer Emila. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a pretty good base to start with.</p>
-					</div>
-				</div>
-			</section>
-
-			<section class="Page-section" id="rebrand">
-				<h2 class="m-bottom--sm when-lg-m-bottom--lg">
-					<p>A sudden re-brand</p>
-					<p class="font-serif color-muted">Out with the new, in with the newer</p>
-				</h2>
-
-				<div class="grid">
-					<div class="grid-item when-lg-6">
-						<p>Chris had contracted out branding to an agency, so my first step was to start turning Emila’s wireframes into hi-fidelity designs using the branding as a basis. However, it quickly became apparent that the branding didn’t suit the product.</p>
-					</div>
-					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
-						{% include carousel.html style="right" image1="/assets/images/work/aeroster/rebrand1.png" image1_description="This was my first iteration. There’s nothing wrong with it, but the cartoony style detracted rather than added to the function of the app." image2="/assets/images/work/aeroster/rebrand2.png" image2_description="Chris and I sat down for about 3 hours and turned that into this. Much better." image3="/assets/images/work/aeroster/rebrand3.png" image3_description="The final version looked like this." %}
-					</div>
+		<section class="Page-section" id="pair">
+			<h2 class="m-bottom--lg">
+				<p>Pair designing</p>
+				<p class="font-serif color-muted">I can’t take all the credit for this one</p>
+			</h2>
+			<div class="grid">
+				<div class="grid-item when-lg-6">
+					{% include carousel.html style="left" image1="/assets/images/work/aeroster/optimised/emila1.png" image2="/assets/images/work/aeroster/optimised/emila2.png" image3="/assets/images/work/aeroster/optimised/emila3.png" description="Thank you Emila :)" %}
 				</div>
 
-				<div class="grid m-top--lg align-center">
-					<div class="grid-item when-lg-6 when-lg-push-6">
-						<p>After our radical redesign, Chris dumped his old agency, hired a new guy, and produced an incredible logo. We picked fonts, colours, icons, and produced a coherent, clean design system.</p>
-					</div>
-					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0 when-lg-pull-6">
-						{% include image.html style="full" url="/assets/images/work/aeroster/optimised/ui-kit.png" %}
-					</div>
+				<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
+					<p>Unfortunately, I was tied up with other projects and wasn’t able to start working immediately. Chris’ schedule was tight, so I got some help from my friend and excellent designer Emila. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a pretty good base to start with.</p>
 				</div>
-			</section>
+			</div>
+		</section>
 
-			<section class="Page-section" id="mobile">
-				<div class="grid align-center">
-					<div class="grid-item when-lg-6">
-						<h2>
-							<p>Mobile-first, desktop-best</p>
-							<p class="font-serif color-muted">Something something subtitle</p>
-						</h2>
-					</div>
-					<div class="grid-item when-lg-6 m-top--sm when-lg-m-top--0">
-						<p>With such a short time, and wanting to cover as much ground as possible, we went with a web application (Vue+Django), but focused on mobile users. The desktop version made proper use of the available real estate, but there’s nothing you can’t do on mobile.</p>
-					</div>
+		<section class="Page-section" id="rebrand">
+			<h2 class="m-bottom--sm when-lg-m-bottom--lg">
+				<p>A sudden re-brand</p>
+				<p class="font-serif color-muted">Out with the new, in with the newer</p>
+			</h2>
+
+			<div class="grid">
+				<div class="grid-item when-lg-6">
+					<p>Chris had contracted out branding to an agency, so my first step was to start turning Emila’s wireframes into hi-fidelity designs using the branding as a basis. However, it quickly became apparent that the branding didn’t suit the product.</p>
 				</div>
-
-				<div class="m-top--lg when-lg-m-top--xl">
-					{% include image.html style="full" url="/assets/images/work/aeroster/desktop-mobile.png" width="1074" %}
+				<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
+					{% include carousel.html style="right" image1="/assets/images/work/aeroster/rebrand1.png" image1_description="This was my first iteration. There’s nothing wrong with it, but the cartoony style detracted rather than added to the function of the app." image2="/assets/images/work/aeroster/rebrand2.png" image2_description="Chris and I sat down for about 3 hours and turned that into this. Much better." image3="/assets/images/work/aeroster/rebrand3.png" image3_description="The final version looked like this." %}
 				</div>
-			</section>
+			</div>
 
-			<section class="Page-section" id="illustrations">
-				<div class="grid">
-					<div class="grid-item when-lg-6 when-lg-push-6">
-						<h2 class="m-bottom--sm when-lg-m-bottom--lg">
-							<p>Quick-n-beautiful illustrations</p>
-							<p class="font-serif color-muted">Something something subtitle</p>
-						</h2>
-
-						<p>I’m no illustrator, but we needed illustrations. I used our chosen icon pack as a base to create some simple, beautiful illustrations that we could pepper throughout the app.</p>
-					</div>
-					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0 when-lg-pull-6">
-						{% include image.html style="left" url="/assets/images/work/aeroster/illustrations.png" %}
-					</div>
+			<div class="grid m-top--lg align-center">
+				<div class="grid-item when-lg-6 when-lg-push-6">
+					<p>After our radical redesign, Chris dumped his old agency, hired a new guy, and produced an incredible logo. We picked fonts, colours, icons, and produced a coherent, clean design system.</p>
 				</div>
-			</section>
-		</div>
+				<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0 when-lg-pull-6">
+					{% include image.html style="full" url="/assets/images/work/aeroster/optimised/ui-kit.png" %}
+				</div>
+			</div>
+		</section>
+
+		<section class="Page-section" id="mobile">
+			<div class="grid align-center">
+				<div class="grid-item when-lg-6">
+					<h2>
+						<p>Mobile-first, desktop-best</p>
+						<p class="font-serif color-muted">Something something subtitle</p>
+					</h2>
+				</div>
+				<div class="grid-item when-lg-6 m-top--sm when-lg-m-top--0">
+					<p>With such a short time, and wanting to cover as much ground as possible, we went with a web application (Vue+Django), but focused on mobile users. The desktop version made proper use of the available real estate, but there’s nothing you can’t do on mobile.</p>
+				</div>
+			</div>
+
+			<div class="m-top--lg when-lg-m-top--xl">
+				{% include image.html style="full" url="/assets/images/work/aeroster/desktop-mobile.png" width="1074" %}
+			</div>
+		</section>
+
+		<section class="Page-section" id="illustrations">
+			<div class="grid">
+				<div class="grid-item when-lg-6 when-lg-push-6">
+					<h2 class="m-bottom--sm when-lg-m-bottom--lg">
+						<p>Quick-n-beautiful illustrations</p>
+						<p class="font-serif color-muted">Something something subtitle</p>
+					</h2>
+
+					<p>I’m no illustrator, but we needed illustrations. I used our chosen icon pack as a base to create some simple, beautiful illustrations that we could pepper throughout the app.</p>
+				</div>
+				<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0 when-lg-pull-6">
+					{% include image.html style="left" url="/assets/images/work/aeroster/illustrations.png" %}
+				</div>
+			</div>
+		</section>
 	</div>
 </div>
