--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@ categories: jekyll update
 permalink: /work/
 ---
 
-<ul class="grid js-masonry Work-masonryGrid">
+<ul class="grid js-masonry">
 	{% for post in site.categories['work'] %}
 		<li class="grid-item when-lg-6 Work-listItem">
 			<a class="Work-link" href="{{ post.url | prepend: site.baseurl }}">
