update old blog content

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@ siteNav: blog
 title:  "Design Solutions"
 categories: jekyll update
 permalink: /design-solutions/
+
+container_size: md
 ---
 
 {% include newsletter.html %}
