--- a/contact.html
+++ b/contact.html
@@ -43,16 +43,16 @@ permalink: /contact/
 		<form class="border-light whitespace--sm container container--sm text-center">
 			<h3 class="m-bottom--lg">Elsewhere</h3>
 			<div class="input-wrapper">
-				<label class="input-label" href="mailto:hello@morgancarter.com.au">Email</label>
-				<a class="button">hello@morgancarter.com.au</a>
+				<label class="input-label">Email</label>
+				<a class="button" href="mailto:hello@morgancarter.com.au">hello@morgancarter.com.au</a>
 			</div>
 			<div class="input-wrapper">
-				<label class="input-label" href="tel:+61426395232">Phone</label>
-				<a class="button">+61 426 395 232</a>
+				<label class="input-label">Phone</label>
+				<a class="button" href="tel:+61426395232">+61 426 395 232</a>
 			</div>
 			<div class="input-wrapper">
-				<label class="input-label" href="https://dribbble.com/morgoe">Dribbbble</label>
-				<a class="button">morgoe</a>
+				<label class="input-label">Dribbbble</label>
+				<a class="button" href="https://dribbble.com/morgoe">morgoe</a>
 			</div>
 		</form>
 	</div>
