redesign hero section, add content

--- a/_posts/work/2017-12-16-medify.html
+++ b/_posts/work/2017-12-16-medify.html
@@ -3,9 +3,10 @@ layout:                work
 date:                  2017-12-12
 categories:    
 - work
+siteNav: work
 featured: true
 
-siteNav: work
+hero_css: "background: rgb(36, 68, 121); color: white;"
 
 jumpLinks:
   - url: launch
