--- a/_posts/work/2018-03-22-aeroster.html
+++ b/_posts/work/2018-03-22-aeroster.html
@@ -6,6 +6,8 @@ categories:
 siteNav: work
 featured: true
 
+hero_css: "background: rgb(78, 66, 116); color: white;"
+
 jumpLinks:
   - url: pair
     text: "Pair designing"
@@ -22,7 +24,7 @@ jumpLinks:
 
 title:                 "Aeroster — Smarter rosters for pilots and cabin crew"
 hero_title:            "Fulfilling a childhood ambition and a gap in the market"
-hero_image:            /assets/images/work/aeroster/hero.png
+hero_image:            /assets/images/work/aeroster/hero2.png
 
 subhero_title:         "Smarter rosters for pilots and cabin crew"
 subhero_subtitle:      "A 10 week accelerated sprint"
