--- a/_posts/work/2017-12-16-medify.html
+++ b/_posts/work/2017-12-16-medify.html
@@ -22,7 +22,7 @@ jumpLinks:
     text: "Coding a custom BEM-based CSS framework"
     icon: code
 
-hero_title:            "Lowering the barrier of entry for medicine"
+hero_title:            "Lowering the barrier to entry of medicine"
 hero_image:            /assets/images/work/medify/hero.png
 
 subhero_title:         "Serving 1 in 3 UK medical students"
