include footer, add “related work” links

--- a/_posts/work/2017-12-16-medify.html
+++ b/_posts/work/2017-12-16-medify.html
@@ -22,6 +22,9 @@ jumpLinks:
     text: "Coding a custom BEM-based CSS framework"
     icon: code
 
+client:                "Medify"
+title:                 "Medify — Leveling the playing field"
+description:           "Medify provides everything an aspiring medic needs to get into medical school. From preparing for exams to writing and reviewing essays, Medify covers more of the timeline than any other company."
 hero_title:            "Lowering the barrier to entry of medicine"
 hero_image:            /assets/images/work/medify/hero.png
 
@@ -34,11 +37,8 @@ thumbnail:             /assets/images/work/medify/thumbnail.jpg
 thumbnail_ratio:       53.125
 image:                 /assets/images/work/medify/medify-user.gif
 
-is_caseStudy:          true
-
-role:                  "Lead Design & Front-end Development"
-description:           "SurgeMaker GPS is a B2B SaaS web application that visualizes the improvements made by teams under coaching and helps inform executives' decisions by drawing insights from data."
-description_short:     "We designed this complex B2B web application for just $50,000."
+relatedWork1:          "Aeroster"
+relatedWork2:          "SurgeMaker"
 ---
 
 <section class="Page-section" id="launch">
