--- a/_posts/work/2018-03-22-aeroster.html
+++ b/_posts/work/2018-03-22-aeroster.html
@@ -22,6 +22,7 @@ jumpLinks:
     text: "Quick-and-beautiful illustrations"
     icon: illustrations
 
+client:                "Aeroster"
 title:                 "Aeroster — Smarter rosters for pilots and cabin crew"
 hero_title:            "Fulfilling a childhood ambition and a gap in the market"
 hero_image:            /assets/images/work/aeroster/hero2.png
@@ -33,6 +34,9 @@ subhero_button_link:   https://www.aeroster.com/
 
 thumbnail:             /assets/images/work/aeroster/thumbnail.jpg
 thumbnail_ratio:       56.25
+
+relatedWork1:          "Medify"
+relatedWork2:          "Deputy"
 ---
 
 <section class="Page-section" id="pair">
