add final hero images

--- a/_posts/work/2017-12-16-medify.html
+++ b/_posts/work/2017-12-16-medify.html
@@ -27,7 +27,7 @@ client:                "Medify"
 title:                 "Medify — Leveling the playing field"
 description:           "Medify provides everything an aspiring medic needs to get into medical school. From preparing for exams to writing and reviewing essays, Medify covers more of the timeline than any other company."
 hero_title:            "Lowering the barrier to entry of medicine"
-hero_image:            /assets/images/work/medify/hero.png
+hero_image:            /assets/images/work/medify/hero.jpg
 
 subhero_title:         "Serving 1 in 3 UK medical students"
 subhero_subtitle:      "Medify levels the playing field"
