--- a/_posts/work/2018-03-22-aeroster.html
+++ b/_posts/work/2018-03-22-aeroster.html
@@ -6,7 +6,7 @@ categories:
 siteNav: work
 featured: true
 
-hero_css: "background: rgb(78, 66, 116); color: white;"
+hero_css: "background: #4f4373; color: white;"
 
 jumpLinks:
   - url: pair
@@ -25,7 +25,8 @@ jumpLinks:
 client:                "Aeroster"
 title:                 "Aeroster — Smarter rosters for pilots and cabin crew"
 hero_title:            "Fulfilling a childhood ambition and a gap in the market"
-hero_image:            /assets/images/work/aeroster/hero2.png
+hero_image:            /assets/images/work/aeroster/hero.jpg
+hero_image_width:      1143
 
 hide_subhero:          true
 subhero_title:         "Smarter rosters for pilots and cabin crew"
