autocomplete email field

--- a/contact.html
+++ b/contact.html
@@ -19,12 +19,12 @@ permalink: /contact/
 			<h3 class="m-bottom--lg">Right here</h3>
 			<div class="input-wrapper input-wrapper--inverted">
 				<label class="input-label" for="contactForm-name">Name</label>
-				<input id="contactForm-name" type="text" name="name" class="input" placeholder="Johnny Placeholder">
+				<input id="contactForm-name" type="text" name="name" class="input" placeholder="Johnny Placeholder" autocomplete="name">
 				<div class="input-interaction"></div>
 			</div>
 			<div class="input-wrapper input-wrapper--inverted">
 				<label class="input-label" for="contactForm-email">Email Address</label>
-				<input id="contactForm-email" type="email" name="email" class="input" placeholder="email@domain.com">
+				<input id="contactForm-email" type="email" name="email" class="input" placeholder="email@domain.com" autocomplete="email">
 				<div class="input-interaction"></div>
 			</div>
 			<div class="input-wrapper input-wrapper--inverted">
