--- a/_posts/work/2018-03-22-aeroster.html
+++ b/_posts/work/2018-03-22-aeroster.html
@@ -92,7 +92,8 @@ relatedWork2:          "Deputy"
 		</div>
 
 		<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
-			<p>Unfortunately, I was tied up with other projects and wasn’t able to start working immediately. Chris’ schedule was tight, so I got some help from my friend and excellent designer <a href="https://twitter.com/emilayang">Emila</a>. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a pretty good base to start with.</p>
+			<p class="when-xl-hidden">Unfortunately, I was tied up with other projects and not able to start working immediately, so I got some help from my designer friend <a href="https://twitter.com/emilayang">Emila</a>. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a good base to start with.</p>
+			<p class="below-xl-hidden">Unfortunately, I was tied up with other projects and wasn’t able to start working immediately. Chris’ schedule was tight, so I got some help from my friend and excellent designer <a href="https://twitter.com/emilayang">Emila</a>. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a pretty good base to start with.</p>
 		</div>
 	</div>
 </section>
