publish medify case study

--- a/_posts/work/2018-03-22-aeroster.html
+++ b/_posts/work/2018-03-22-aeroster.html
@@ -91,7 +91,7 @@ relatedWork2:          "Deputy"
 			{% include carousel.html style="left" image1="/assets/images/work/aeroster/optimised/emila1.png" image2="/assets/images/work/aeroster/optimised/emila2.png" image3="/assets/images/work/aeroster/optimised/emila3.png" description="Thank you Emila :)" %}
 		</div>
 
-		<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
+		<div class="grid-item when-lg-6 m-top--sm when-lg-m-top--0">
 			<p class="when-xl-hidden">Unfortunately, I was tied up with other projects and not able to start working immediately, so I got some help from my designer friend <a href="https://twitter.com/emilayang">Emila</a>. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a good base to start with.</p>
 			<p class="below-xl-hidden">Unfortunately, I was tied up with other projects and wasn’t able to start working immediately. Chris’ schedule was tight, so I got some help from my friend and excellent designer <a href="https://twitter.com/emilayang">Emila</a>. She worked the first few weeks designing the wireframes and user flows, and then I took over. So I had a pretty good base to start with.</p>
 		</div>
